Fixed width on mobile for cards :rocket:

--- a/_css/main.scss
+++ b/_css/main.scss
@@ -1126,10 +1126,10 @@ footer {
   width: 100%;
 }
 .index-content .card{
-  background-color: #FFFF00;
+  background-color: #FFFFFF;
   padding:0;
   margin: 10px;
-  width: 30%;
+  width: 100%;
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   border-radius:4px;
@@ -1148,11 +1148,16 @@ footer {
 }
 .index-content .card h4{
   margin:20px;
+  color: $accent-color;
+  font-weight: 500;
 }
 .index-content .card p{
   margin:20px;
   opacity: 0.65;
   text-overflow: ellipsis;
+  color: black;
+  font-style: normal !important;
+  font-size: 14px;
 }
 .index-content .blue-button{
   -webkit-transition: background-color 1s , color 1s; /* For Safari 3.1 to 6.0 */
@@ -1175,5 +1180,9 @@ footer {
 
   .index-content .col-lg-4 {
     margin-top: 20px;
+  }
+
+  .index-content .cards {
+    display: block;
   }
 }
